--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,14 +9,16 @@
 
 body {
     font-family: "Raleway", sans-serif;
+    background-color: black;
 }
+
+/* HEADER */
 
 .banner {
     width: 100%;
     height: 600px;
     padding-top: 60px;
     border-bottom: 1px solid blue;
-    background-color: black;
     background-image: url("../images/banner.png");
 }
 
@@ -61,4 +63,54 @@ body {
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 4px;
+}
+
+/* MAIN */
+
+#course-content {
+    width: 800px;
+    height: 330px;
+    margin: 100px auto;
+}
+
+#course-content h2 {
+    width: 100%;
+    height: 37px;
+    margin: 0 auto 24px;
+    text-align: center;
+    font-size: 2rem;
+    color: rgb(78, 163, 254);
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-weight: bold;
+}
+
+#course-content p {
+    width: 100%;
+    height: 38px;
+    text-align: center;
+    color: whitesmoke;
+}
+
+.modules-list {
+    width: 100%;
+    height: 207px;
+    margin: 24px 0;
+}
+
+.module {
+    width: 530px;
+    height: 53px;
+    margin: 0 auto 24px;
+    padding: 16px;
+    border: 1px solid rgb(51, 168, 219);
+    border-radius: 50px;
+    background-color: rgb(31, 31, 31);
+    box-shadow: inset rgba(0, 0, 0, 0.7) 0 6px 8px 0px;
+    color: white;
+    text-align: center;
+}
+
+.module span {
+    color: rgb(51, 168, 219);
 }
