--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,7 +18,7 @@ body {
     width: 100%;
     height: 600px;
     padding-top: 60px;
-    border-bottom: 1px solid blue;
+    border-bottom: 1px solid rgba(51, 168, 219, 0.5);
     background-image: url("../images/banner.png");
 }
 
@@ -56,7 +56,7 @@ body {
     height: 55px;
     margin: 0 auto 0;
     background-color: transparent;
-    border: 2px solid blue;
+    border: 2px solid rgba(51, 168, 219, 0.5);
     padding: 16px 32px;
     color: whitesmoke;
     font-size: 1rem;
@@ -66,6 +66,8 @@ body {
 }
 
 /* MAIN */
+
+/* SEÇÃO 1 */
 
 #course-content {
     width: 800px;
@@ -113,4 +115,28 @@ body {
 
 .module span {
     color: rgb(51, 168, 219);
+}
+
+/* SEÇÃO 2 */
+
+#transform-world {
+    width: 100%;
+    height: 560px;
+    margin: 100px 0;
+    padding: 200px;
+    border-top: 1px solid rgba(51, 168, 219, 0.5);
+    border-bottom: 1px solid rgba(51, 168, 219, 0.5);
+    background-image: url("../images/woman-code.png");
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+#transform-world p{
+    width: 250px;
+    height: 141px;
+    text-transform: lowercase;
+    color: white;
+    font-size: 40px;
+    font-weight: 900;
+    text-shadow: rgb(51, 168, 219) 3px 2px;
 }
