--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,14 +71,11 @@ body {
 
 #course-content {
     width: 800px;
-    height: 330px;
     margin: 100px auto;
 }
 
 #course-content h2 {
-    width: 100%;
-    height: 37px;
-    margin: 0 auto 24px;
+    margin: 0 0 24px;
     text-align: center;
     font-size: 2rem;
     color: rgb(78, 163, 254);
@@ -88,21 +85,16 @@ body {
 }
 
 #course-content p {
-    width: 100%;
-    height: 38px;
     text-align: center;
     color: whitesmoke;
 }
 
 .modules-list {
-    width: 100%;
-    height: 207px;
     margin: 24px 0;
 }
 
 .module {
     width: 530px;
-    height: 53px;
     margin: 0 auto 24px;
     padding: 16px;
     border: 1px solid rgb(51, 168, 219);
@@ -120,8 +112,6 @@ body {
 /* SEÇÃO 2 */
 
 #transform-world {
-    width: 100%;
-    height: 560px;
     margin: 100px 0;
     padding: 200px;
     border-top: 1px solid rgba(51, 168, 219, 0.5);
@@ -133,10 +123,35 @@ body {
 
 #transform-world p{
     width: 250px;
-    height: 141px;
     text-transform: lowercase;
     color: white;
     font-size: 40px;
     font-weight: 900;
     text-shadow: rgb(51, 168, 219) 3px 2px;
+}
+
+/* SEÇÃO 3 */
+
+#professional-challenges {
+    width: 800px;
+    margin: 100px auto;
+    text-align: center;
+}
+
+#professional-challenges h2 {
+    margin: 0 0 24px;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 2rem;
+    letter-spacing: 4px;
+    color: rgb(78, 163, 254);
+}
+
+#professional-challenges img {
+    margin: 32px auto;
+}
+
+#professional-challenges p {
+    text-align: center;
+    color: whitesmoke;
 }
