--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -155,3 +155,19 @@ body {
     text-align: center;
     color: whitesmoke;
 }
+
+/* FOOTER */
+
+footer {
+    padding: 60px 0;
+    border-top: 1px solid rgba(51, 168, 219, 0.5);
+    text-align: center;
+    color: whitesmoke;
+    background-image: linear-gradient(rgba(50, 168, 219, 0), rgba(50, 168, 219, 0.2));
+}
+
+footer a {
+    font-weight: 700;
+    color: rgb(51, 168, 219);
+    text-decoration: none;
+}
